--- a/notebooks/artificial_neural_networks_basics.ipynb
+++ b/notebooks/artificial_neural_networks_basics.ipynb
@@ -135,13 +135,25 @@
    "id": "5dc56317-0fae-426d-b029-0b981107df78",
    "metadata": {},
    "source": [
-    "Assuming you are familiar with Logistic Regression, recall that a Logistic Regression model mapping in input $x$ to an output $y$ is defined as\n",
-    "\n",
+    "Assuming you are familiar with Logistic Regression, recall that a Logistic Regression model mapping in input $x$ to an output $y$ is defined as"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3df49351-cb97-488b-b973-93934605c4ac",
+   "metadata": {},
+   "source": [
     "$$\\large\n",
     "y = \\sigma(z) = \\frac{1}{1 + e^{-\\mathbf{w}^T\\mathbf{x}}}\n",
-    "$$\n",
-    "\n",
-    "where $\\sigma$ is the Sigmoid function, $\\mathbf{w}^T = [w_0, w_1, w_2, \\dots, w_d]$ is the vector of weights (or parameters), and $\\mathbf{x}^T = [x_1, x_2, \\dots, x_d]$ is the vector of features. The image below shows a graphical representation of this computation which underpins Logistic Regression.\n"
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4031972c-7c72-4bd6-80e6-980753964393",
+   "metadata": {},
+   "source": [
+    "where $\\sigma$ is the Sigmoid function, $\\mathbf{w}^T = [w_0, w_1, w_2, \\dots, w_d]$ is the vector of weights (or parameters), and $\\mathbf{x}^T = [x_1, x_2, \\dots, x_d]$ is the vector of features. The image below shows a graphical representation of this computation which underpins Logistic Regression."
    ]
   },
   {
@@ -157,12 +169,24 @@
    "id": "1ea0f86e-2bdb-4fbe-be9b-f8f18bbf57ae",
    "metadata": {},
    "source": [
-    "Here, $\\sum$ represents the weighted sum of the input features:\n",
-    "\n",
+    "Here, $\\sum$ represents the weighted sum of the input features:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "376cfb79-89fb-4038-90fd-37237f047bbd",
+   "metadata": {},
+   "source": [
     "$$\\large\n",
     "z = \\mathbf{w}^T\\mathbf{x} = \\sum_{i=1}^d w_ix_i\n",
-    "$$\n",
-    "\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c8ca4648-376a-4772-b500-9786252617c6",
+   "metadata": {},
+   "source": [
     "with $x_0 = 1$ being the artificial feature to incorporate the bias weight $w_0$. As already mentioned, an artificial neuron may not exactly implement a Logistic Regression model. Particularly, an artificial neuron may feature an activation function that is not the Sigmoid function. Recall that Logistic Regression uses the Sigmoid function to ensure that the output $y \\in [0, 1]$ and thus can be interpreted as a probability. As we will see later, the output of an artificial neuron that returns the final output of a neural network is generally not required to be interpreted as a probability. This allows for the application for a wide range of activation functions. Therefore, the more general graphical representation of an artificial neuron is shown below."
    ]
   },
@@ -256,28 +280,70 @@
    "id": "9d7ef61e-6003-4ce9-a7a0-4dfecc92f26c",
    "metadata": {},
    "source": [
-    "Since each neuron comes with its own set of weight, uniquely identifying a single weight becomes a bit more complex. A common convention for denoting a weight is $w_{ji}$ where $j$ is the $j$-th neuron in the layer and $i$ is the $i$-th input. Notice that the figure above is missing the bias value \"$+1$\" and the associated weights $w_{10}$, $w_{20}$, $w_{30}$, ..., $w_{d0}$. This is commonly done to simplify the visualization of ANNs, but remember that each neuron has its own bias term. Based on this, we can also calculate the number of weights for a layer with $d$ neurons and $k$ inputs as:\n",
-    "\n",
+    "Since each neuron comes with its own set of weight, uniquely identifying a single weight becomes a bit more complex. A common convention for denoting a weight is $w_{ji}$ where $j$ is the $j$-th neuron in the layer and $i$ is the $i$-th input. Notice that the figure above is missing the bias value \"$+1$\" and the associated weights $w_{10}$, $w_{20}$, $w_{30}$, ..., $w_{d0}$. This is commonly done to simplify the visualization of ANNs, but remember that each neuron has its own bias term. Based on this, we can also calculate the number of weights for a layer with $d$ neurons and $k$ inputs as:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1e41e3d5-6e67-426a-b269-1a2df576f29d",
+   "metadata": {},
+   "source": [
     "$$\\large\n",
     "\\text{Number of weights} = kd + d\n",
-    "$$\n",
-    "\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d2bb981a-b0b7-42df-9509-6285299d7aed",
+   "metadata": {},
+   "source": [
     "For example, in line with the figure above, if a layer has $d=d$ neurons each receiving the same $k=2$ inputs, the number of required weights is $2\\cdot 4 + 4 = 12$.\n",
     "\n",
-    "Using this notation for the weights, we can now also express the output $a_j$ of the $j$-th neuron in the layer:\n",
-    "\n",
+    "Using this notation for the weights, we can now also express the output $a_j$ of the $j$-th neuron in the layer:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8710b4a5-ea3f-454e-9c34-f07e78f2fa9c",
+   "metadata": {},
+   "source": [
     "$$\\large\n",
-    "a_i = f\\left(\\sum_{j=1}^k w_{ji}x_{k} + b_{i}\\right) = f\\left(\\mathbf{w}_{i}^{T}\\mathbf{x} + b_{i}\\right)\n",
-    "$$\n",
-    "\n",
-    "We use $b_{j}$ to denote the bias weight $w_{j0}$. The only reason for this is to adhere to common conventions in the neural network literature. The express the output of the complete layer (i.e., all individual outputs $a_1$, $a_2$, $a_3$, ..., $a_d$) as a single equation we combine all weights (incl. biases) and inputs into matrices and vectors:\n",
-    "\n",
+    "a_i = f\\left(\\sum_{j=1}^k w_{ij}x_{j} + b_{i}\\right) = f\\left(\\mathbf{w}_{i}^{T}\\mathbf{x} + b_{i}\\right)\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c720f354-b773-49d1-a7e3-ac2f5449fbfb",
+   "metadata": {},
+   "source": [
+    "We use $b_{j}$ to denote the bias weight $w_{j0}$. The only reason for this is to adhere to common conventions in the neural network literature. The express the output of the complete layer (i.e., all individual outputs $a_1$, $a_2$, $a_3$, ..., $a_d$) as a single equation we combine all weights (incl. biases) and inputs into matrices and vectors:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "32564a93-531a-4fe0-a82c-9081b4477ac3",
+   "metadata": {},
+   "source": [
     "$$\\large\n",
     "\\mathbf{a} = f\\left(\\mathbf{W}\\mathbf{x} + \\mathbf{b}\\right)\n",
-    "$$\n",
-    "\n",
-    "where the weight matrix $\\mathbf{W}$ is of size $d\\times k$, input vector $\\mathbf{x}$ is of size $k\\times 1$, and bias vector $\\mathbf{b}$ is of size $d\\times 1$; more specifically:\n",
-    "\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43fdd506-5bf3-47c9-8833-7f86a16f6a66",
+   "metadata": {},
+   "source": [
+    "where the weight matrix $\\mathbf{W}$ is of size $d\\times k$, input vector $\\mathbf{x}$ is of size $k\\times 1$, and bias vector $\\mathbf{b}$ is of size $d\\times 1$; more specifically:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "07a3eb93-81d3-45fe-b034-a1eb3fb3d634",
+   "metadata": {},
+   "source": [
     "$$\\large\n",
     "\\mathbf{W} =\n",
     "\\begin{bmatrix}\n",
@@ -306,9 +372,15 @@
     "\t\\vdots \\\\\n",
     "\tb_{d}\n",
     "\\end{bmatrix}\n",
-    "$$\n",
-    "\n",
-    "The output vector $a$ is of size $d\\times 1$. All matrix and vector elements are real numbers.\n"
+    "$$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca99ffad-f00e-4b50-9dc0-787ea0dedad2",
+   "metadata": {},
+   "source": [
+    "The output vector $a$ is of size $d\\times 1$. All matrix and vector elements are real numbers."
    ]
   },
   {
@@ -398,21 +470,51 @@
    "id": "518b3e7f-3148-41c1-8874-1cfcfd58b595",
    "metadata": {},
    "source": [
-    "The output of an ANN is calculated layer by layer, starting from the input layer, through all hidden layers, and finally the output layer. If we define $a_{i}^{[0]} = x_{i}$, we can define define the output of each neuron in the network as follows:\n",
-    "\n",
+    "The output of an ANN is calculated layer by layer, starting from the input layer, through all hidden layers, and finally the output layer. If we define $a_{i}^{[0]} = x_{i}$, we can define define the output of each neuron in the network as follows:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "399ddbad-751b-4289-b216-349b4fa0e445",
+   "metadata": {},
+   "source": [
     "$$\n",
     "\\begin{align}\n",
     "\\large a_{i}^{[l]} &= \\large f^{[l]} \\left( \\sum_{j=1}^{d^{[l-1]}} w_{ij}^{[l]}a_{j}^{[l-1]} + b_{i}^{[l]} \\right)\\\\[0.5em]\n",
     "&= \\large f \\left( \\left[ \\mathbf{w}_{i}^{[l]} \\right]^T  \\mathbf{a}^{[l-1]} + \\mathbf{b}^{[l]} \\right)\n",
     "\\end{align}\n",
-    "$$\n",
-    "\n",
-    "Complete layer\n",
-    "\n",
-    "$$\\large \\mathbf{a}^{[l]}  = f^{[l]} \\left( \\mathbf{W}^{[l]}\\mathbf{a}^{[l-1]} + \\mathbf{b}^{[l]}  \\right) $$\n",
-    "\n",
-    "where $\\mathbf{a}^{[0]} = \\mathbf{x}$; where weight matrix $\\mathbf{W}^{[l]}$ is of size $d^{[l]}\\times d^{[l-1]}$, input vector $\\mathbf{a}^{[l]}$ is of size $d^{[l-1]}\\times 1$, and bias vector $\\mathbf{b}^{[l]}$ is of size $d^{[d]}\\times 1$; more specifically:\n",
-    "\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "46a28978-9759-42db-bbb4-8f48975ebffc",
+   "metadata": {},
+   "source": [
+    "We can now define the output of $l$-th layer as:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b809d187-c84a-4f09-ae6c-a1e2a4bdaedc",
+   "metadata": {},
+   "source": [
+    "$$\\large \\mathbf{a}^{[l]}  = f^{[l]} \\left( \\mathbf{W}^{[l]}\\mathbf{a}^{[l-1]} + \\mathbf{b}^{[l]}  \\right) $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "73b2fada-b178-438f-b087-c9975f981b4d",
+   "metadata": {},
+   "source": [
+    "where $\\mathbf{a}^{[0]} = \\mathbf{x}$; where weight matrix $\\mathbf{W}^{[l]}$ is of size $d^{[l]}\\times d^{[l-1]}$, input vector $\\mathbf{a}^{[l]}$ is of size $d^{[l-1]}\\times 1$, and bias vector $\\mathbf{b}^{[l]}$ is of size $d^{[d]}\\times 1$; more specifically:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a148f7b-54e7-4b4a-a631-6806b777ef84",
+   "metadata": {},
+   "source": [
     "$$\\large\n",
     "\\mathbf{W} =\n",
     "\\begin{bmatrix}\n",
@@ -441,8 +543,14 @@
     "    \\vdots \\\\\n",
     "    b_{d^{[l]}}^{[l]}\n",
     "\\end{bmatrix}\n",
-    "$$\n",
-    "\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fe53cf55-85a8-4f20-af64-0a7dd4fa034d",
+   "metadata": {},
+   "source": [
     "The output $\\mathbf{a^{[l]}}$ of a layer $l$ is calculated \"in one go\". Calculating $\\mathbf{a^{[l]}}$ relies solely on matrix and vector operations which can be highly parallelized using GPUs (Graphical Processing Units) or TPUs (Tensor Processing Units). GPUs and TPUs are special types of hardware designed to handle many calculations at the same time, making them much faster than regular CPUs for certain tasks. GPUs were originally built for rendering graphics in video games, but their ability to perform lots of calculations in parallel makes them great for training neural networks. TPUs are even more specialized. They are designed specifically for machine learning tasks, especially for training and running deep neural networks. Unlike GPUs, which are general-purpose, TPUs are built to process the kinds of math (like matrix multiplications) that neural networks rely on. This makes TPUs faster and more efficient than GPUs for many machine learning tasks, especially at a large scale."
    ]
   },
@@ -451,17 +559,35 @@
    "id": "2dd16ec3-21cc-449a-b4d9-3b7e27279df3",
    "metadata": {},
    "source": [
-    "Using the notation for denoting the output of a layer, we can see that the output $\\mathbf{y}$ of a network is the output of the last layer, i.e., layer $L$. This means that $\\mathbf{y} = \\mathbf{a}^{[L]}$, and using the equation above, we can calculate the output $\\mathbf{y}$ as:\n",
-    "\n",
+    "Using the notation for denoting the output of a layer, we can see that the output $\\mathbf{y}$ of a network is the output of the last layer, i.e., layer $L$. This means that $\\mathbf{y} = \\mathbf{a}^{[L]}$, and using the equation above, we can calculate the output $\\mathbf{y}$ as:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "85cae031-5de0-4bac-9120-1b702f96e92a",
+   "metadata": {},
+   "source": [
     "$$\n",
     "\\begin{align}\n",
     "\\large \\mathbf{y} &= \\large \\mathbf{a}^{[L]} \\\\[0.5em]\n",
     "&= \\large f^{[L]} \\left( \\mathbf{W}^{[L]}\\mathbf{a}^{[L-1]} + \\mathbf{b}^{[L]}  \\right)\n",
     "\\end{align}\n",
-    "$$\n",
-    "\n",
-    "As the output $\\mathbf{a}^{[L]}$ of the last layer $L$, depends on the output $\\mathbf{a}^{[L-1]}$ of the previous, i.e., second-to-last, layer $L-1$. Of course, now the output $\\mathbf{a}^{[L-1]}$ depends on the output of $\\mathbf{a}^{[L-2]}$. This recursive definition of the network output $\\mathbf{y}$ continues until we reach the initial input $\\mathbf{a}^{[0]} = \\mathbf{x}$; more formally:\n",
-    "\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "58f62e4a-590e-41e4-8d0c-b7dd644ee18a",
+   "metadata": {},
+   "source": [
+    "As the output $\\mathbf{a}^{[L]}$ of the last layer $L$, depends on the output $\\mathbf{a}^{[L-1]}$ of the previous, i.e., second-to-last, layer $L-1$. Of course, now the output $\\mathbf{a}^{[L-1]}$ depends on the output of $\\mathbf{a}^{[L-2]}$. This recursive definition of the network output $\\mathbf{y}$ continues until we reach the initial input $\\mathbf{a}^{[0]} = \\mathbf{x}$; more formally:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d340a418-6383-444d-9d69-ebbc5f1e1b15",
+   "metadata": {},
+   "source": [
     "$$\n",
     "\\begin{align}\n",
     "\\large \\mathbf{y} &= \\large \\mathbf{a}^{[L]} \\\\[0.5em]\n",
@@ -470,9 +596,15 @@
     "&= \\large f^{[L]} \\left( \\mathbf{W}^{[L]} \\left[ f^{[L-1]} \\left( \\mathbf{W}^{[L-1]} \\left[ f^{[L-2]} \\left( \\mathbf{W}^{[L-2]}\\mathbf{a}^{[L-3]} + \\mathbf{b}^{[L-2]}  \\right)   \\right] + \\mathbf{b}^{[L-1]}  \\right)   \\right]\t+ \\mathbf{b}^{[L]}  \\right) \\\\[0.5em]\n",
     "&= \\large f^{[L]} \\left( \\mathbf{W}^{[L]} \\left[ f^{[L-1]} \\left( \\mathbf{W}^{[L-1]} \\left[ f^{[L-2]} \\left( \\mathbf{W}^{[L-2]} \\left[ \\cdots  f^{[1]} \\left( \\mathbf{W}^{[1]}\\mathbf{x} + \\mathbf{b}^{[1]}  \\right) \\cdots  \\right] + \\mathbf{b}^{[L-2]}  \\right)   \\right] + \\mathbf{b}^{[L-1]}  \\right)   \\right]\t+ \\mathbf{b}^{[L]}  \\right)\n",
     "\\end{align}\n",
-    "$$\n",
-    "\n",
-    "This equation illustrates the layer-wise computation of the network output, where the input $\\mathbf{x}$ is transformed by each hidden layer and finally the output layer to yield $\\mathbf{y}$.\n"
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bddf1a3c-b1d3-440e-ac32-19a9bd03e3b8",
+   "metadata": {},
+   "source": [
+    "This equation illustrates the layer-wise computation of the network output, where the input $\\mathbf{x}$ is transformed by each hidden layer and finally the output layer to yield $\\mathbf{y}$."
    ]
   },
   {
@@ -566,8 +698,14 @@
    "id": "d72174a6-f16d-4811-97eb-68865b2336f1",
    "metadata": {},
    "source": [
-    "We already know that $\\mathbf{a}^{[1]}$ is not the input for layer 2, which here is already our output layer that will give us $y$. Once again, assume some random entries for the weight matrices and biases, we can calculate $\\mathbf{y} = \\mathbf{a}^{[1]}$ as:\n",
-    "\n",
+    "We already know that $\\mathbf{a}^{[1]}$ is not the input for layer 2, which here is already our output layer that will give us $y$. Once again, assume some random entries for the weight matrices and biases, we can calculate $\\mathbf{y} = \\mathbf{a}^{[1]}$ as:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9650800f-5cfe-4a7a-8e0c-b4690d301ddf",
+   "metadata": {},
+   "source": [
     "$$\n",
     "\\begin{align}\n",
     "\\large \\mathbf{y} = \\mathbf{a}^{[2]} &= \\large \\sigma \\left( \\mathbf{W}^{[2]}\\mathbf{a}^{[1]} + \\mathbf{b}^{[2]}  \\right)\\\\[1.0em]\n",
@@ -605,8 +743,14 @@
     "\t0.70\n",
     "\\end{bmatrix}\n",
     "\\end{align}\n",
-    "$$\n",
-    "\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ec14a71-41a3-4779-aee0-bb158bda4833",
+   "metadata": {},
+   "source": [
     "Notice that the output is a vector containing a single element. In principle the approach can be done for multiple inputs $\\mathbf{x}$ in parallel. The only difference is that the input vector $\\mathbf{x}$ becomes an input matrix $\\mathbf{X}$, as well as all layer outputs $\\mathbf{a}^{[l]}$ become a matrix where the number or columns reflect the number of input data samples.\n",
     "\n",
     "As usual, when using the Sigmoid function as the activation function for a single output, we can interpret $y$ again as a probability. In other words, the probability that the example input vector $\\mathbf{x}$ belongs to Class 1 is about $70%$."
