--- a/notebooks/positional_encodings_overview.ipynb
+++ b/notebooks/positional_encodings_overview.ipynb
@@ -130,7 +130,7 @@
     "\n",
     "With positional encodings being \"some vectors\" capturing positional embeddings that are added to the embedding vectors of words (i.e., encodings capturing the meaning of words), the obvious questions what kind of vectors represent meaningful positional encodings and how do we get them. Before we cover some of the more common methods, let's first derive some basic characteristics positional encodings need to have. We can do this by looking at some naive approaches and discussing the problems and limitations. We use absolute positional encoding for this since it is generally the simpler approach.\n",
     "\n",
-    "The figure below shows the most basic idea behind absolute positional encodings. In this figure, $\\mathbf{w}_i$ represents the embedding vector of the word at the $i$-th position in the input sequence of length $L$; $\\mathbf{p}_i$ is an embedding vector encoding position $i$ which added to word embedding vector $e_i$. The result vectors $\\mathbf{e}_{0}, \\mathbf{e}_{1}, \\mathbf{e}_{2}, ..., \\mathbf{e}_{L\\!-\\!1}$ the form the input sequence for the Transformer model."
+    "The figure below shows the most basic idea behind absolute positional encodings. In this figure, $\\mathbf{w}_i$ represents the embedding vector of the word at the $i$-th position in the input sequence of length $L$; $\\mathbf{p}_i$ is an embedding vector encoding position $i$ which is added to word embedding vector $\\mathbf{w}_i$, forming the combined embedding vector $\\mathbf{e}_i$. All resulting vectors $\\mathbf{e}_{0}, \\mathbf{e}_{1}, \\mathbf{e}_{2}, ..., \\mathbf{e}_{L\\!-\\!1}$ then form the input sequence for the Transformer model."
    ]
   },
   {
