--- a/notebooks/byte_pair_encoding_tokenization.ipynb
+++ b/notebooks/byte_pair_encoding_tokenization.ipynb
@@ -323,7 +323,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'d', 'r', 'n', 't', '_', 'l', 'g', 'o', 's', 'i', 'w', 'e'}\n"
+      "{'t', 'e', '_', 'r', 'o', 'l', 's', 'i', 'g', 'w', 'n', 'd'}\n"
      ]
     }
    ],
@@ -568,7 +568,7 @@
       "}\n",
       "\n",
       "Updated vocabulary\n",
-      "{'d', 'es', 'r', 'n', 't', '_', 'l', 'g', 'o', 's', 'i', 'w', 'e'}\n"
+      "{'t', 'e', '_', 'r', 'es', 'o', 'l', 's', 'i', 'g', 'w', 'n', 'd'}\n"
      ]
     }
    ],
@@ -677,7 +677,7 @@
       "}\n",
       "\n",
       "Final vocabulary (size: 21):\n",
-      "{'d', 'es', 'ne', 'low_', 'l', 'low', 'new', '_', 'g', 's', 'i', 'est', 'newest_', 'w', 'n', 't', 'r', 'lo', 'o', 'est_', 'e'}\n",
+      "{'t', 'ne', 'new', 'w', 'newest_', 'e', 'r', 'es', 'low', 'est', 'low_', 'i', 'est_', 'lo', '_', 'o', 'l', 'n', 'd', 's', 'g'}\n",
       " \n",
       "Final list of merges:\n",
       "[('e s', 'es'), ('es t', 'est'), ('est _', 'est_'), ('l o', 'lo'), ('lo w', 'low'), ('n e', 'ne'), ('ne w', 'new'), ('new est_', 'newest_'), ('low _', 'low_')]\n"
@@ -1022,7 +1022,7 @@
    "source": [
     "### Revised BPE Tokenizer Implementation\n",
     "\n",
-    "For this application use case, we provide the class `MyBpeTokenizer` in the file `src/tokenizer.py`. This class contains exactly the methods we used so far to train and use our tokenizer. However, incorporating all methods into this class allows for a cleaner code and a much easier usage &mdash; now that we understand how BPE works. This means, we can train our BPE tokenizer now with a single line of code. The code for the class contains only two minor changes:\n",
+    "For this application use case, we provide the class `MyBpeTokenizer` in the file `src/text/preprocessing/tokenizing/tokenizer.py`. This class contains exactly the methods we used so far to train and use our tokenizer. However, incorporating all methods into this class allows for a cleaner code and a much easier usage &mdash; now that we understand how BPE works. This means, we can train our BPE tokenizer now with a single line of code. The code for the class contains only two minor changes:\n",
     "\n",
     "* By default, like GPT2, it uses the character Ġ (instead of the underscore) as a special character. We also move this special character from the end of a word to that start of the word. This has no effect on the algorithm, and we only do this so our output mimics the one from pretrained BPE tokenizer models.\n",
     "* For pretokenization, it supports naive whitespace tokenization as well as approach done by GPT2 (see above).\n",
@@ -1048,7 +1048,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 20%|██████████████████████▎                                                                                      | 18/88 [00:00<00:00, 5328.73it/s]\n"
+      " 20%|██████████████████████▎                                                                                      | 18/88 [00:00<00:00, 5307.38it/s]\n"
      ]
     }
    ],
@@ -1086,7 +1086,7 @@
       "}\n",
       "\n",
       "Final vocabulary (size: 30):\n",
-      "{'d', 'es', 'Ġlo', 'l', 'Ġne', 'Ġlower', 'Ġwid', 'Ġnewest', 'Ġwidest', 'g', 'Ġl', 'Ġnew', 's', 'i', 'Ġn', 'Ġlonger', 'est', 'Ġlow', 'Ġw', 'Ġ', 'w', 'n', 't', 'Ġlon', 'r', 'o', 'Ġlong', 'Ġwi', 'er', 'e'}\n",
+      "{'t', 'Ġlo', 'Ġlow', 'Ġne', 'Ġwid', 'Ġ', 'w', 'Ġlonger', 'Ġl', 'Ġw', 'Ġlong', 'e', 'r', 'es', 'est', 'i', 'Ġn', 'Ġlon', 'o', 'l', 'Ġnewest', 'Ġnew', 'n', 'd', 'er', 'Ġlower', 's', 'Ġwi', 'g', 'Ġwidest'}\n",
       " \n",
       "Final list of merges:\n",
       "[('e s', 'es'), ('es t', 'est'), ('Ġ l', 'Ġl'), ('Ġl o', 'Ġlo'), ('Ġlo w', 'Ġlow'), ('Ġ n', 'Ġn'), ('Ġn e', 'Ġne'), ('Ġne w', 'Ġnew'), ('Ġnew est', 'Ġnewest'), ('Ġ w', 'Ġw'), ('e r', 'er'), ('Ġw i', 'Ġwi'), ('Ġwi d', 'Ġwid'), ('Ġwid est', 'Ġwidest'), ('Ġlow er', 'Ġlower'), ('Ġlo n', 'Ġlon'), ('Ġlon g', 'Ġlong'), ('Ġlong er', 'Ġlonger')]\n"
@@ -1170,7 +1170,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████| 9911/9911 [04:14<00:00, 38.89it/s]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████| 9911/9911 [04:16<00:00, 38.63it/s]\n"
      ]
     }
    ],
