--- a/notebooks/decision_trees_cart.ipynb
+++ b/notebooks/decision_trees_cart.ipynb
@@ -592,7 +592,7 @@
      "output_type": "stream",
      "text": [
       "All partitions for education level:\n",
-      "[({'Bachelor'}, {'PhD', 'Masters'}), ({'Masters'}, {'Bachelor', 'PhD'}), ({'PhD'}, {'Bachelor', 'Masters'})]\n",
+      "[({'PhD'}, {'Bachelor', 'Masters'}), ({'Bachelor'}, {'PhD', 'Masters'}), ({'Masters'}, {'PhD', 'Bachelor'})]\n",
       "\n",
       "All partitions for marital statuses:\n",
       "[({'Single'}, {'Married'})]\n"
@@ -733,11 +733,11 @@
    "id": "63ef584c-0d7d-4fd3-a076-3a665a989162",
    "metadata": {},
    "source": [
-    "$$\\begin{align}\n",
+    "$$\\begin{align*}\n",
     "\\large Gini(t)\\ &\\large = 1 - \\left(P(\\text{\"NO\"}|t)^2 + P(\\text{\"YES\"}|t)^2 \\right) \\\\[0.5em]\n",
     "&\\large = 1 - \\left( \\left(\\frac{1}{6}\\right)^2 + \\left(\\frac{5}{6}\\right)^2\\right) \\\\[0.5em]\n",
     "&\\large\\approx 0.278\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
     "$$"
    ]
   },
@@ -906,11 +906,11 @@
    "id": "7955886e-b749-4ad7-8b3e-64d1e775f366",
    "metadata": {},
    "source": [
-    "$$\\begin{align}\n",
+    "$$\\begin{align*}\n",
     "\\large Gini(s_{mstatus})\\ &\\large = \\frac{5}{9}\\left[ 1 - \\left( \\left(\\frac{3}{5}\\right)^2 + \\left(\\frac{2}{5}\\right)^2\\right) \\right] + \\frac{4}{9}\\left[ 1 - \\left( \\left(\\frac{2}{4}\\right)^2 + \\left(\\frac{2}{4}\\right)^2\\right) \\right]  \\\\[0.75em]\n",
     "&\\large = \\frac{5}{9}\\cdot 0.48\\ +\\ \\frac{4}{9}\\cdot 0.5  \\\\[0.75em]\n",
     "&\\large\\approx 0.49\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
     "$$"
    ]
   },
@@ -943,11 +943,11 @@
    "id": "ad565a77-259f-46a2-9b4c-905d9dc54213",
    "metadata": {},
    "source": [
-    "$$\\begin{align}\n",
+    "$$\\begin{align*}\n",
     "\\large Gini(s_{education})\\ &\\large = \\frac{3}{9}\\left[ 1 - \\left( \\left(\\frac{3}{3}\\right)^2 + \\left(\\frac{0}{3}\\right)^2\\right) \\right] + \\frac{6}{9}\\left[ 1 - \\left( \\left(\\frac{1}{6}\\right)^2 + \\left(\\frac{5}{6}\\right)^2\\right) \\right]  \\\\[0.75em]\n",
     "&\\large\\approx \\frac{3}{9}\\cdot 0.0\\ +\\ \\frac{6}{9}\\cdot 0.28  \\\\[0.75em]\n",
     "&\\large\\approx 0.19\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
     "$$"
    ]
   },
@@ -1198,10 +1198,10 @@
    "id": "7b6f483f-12fd-42bf-997a-0b16c433b253",
    "metadata": {},
    "source": [
-    "$$\\begin{align}\n",
+    "$$\\begin{align*}\n",
     "\\large \\mu_{R_{left}}\\ &\\large= \\frac{75 + 70 + 95 + 40 + 60}{5} = 68\\\\[0.5em]\n",
     "\\large \\mu_{R_{right}}\\ &\\large= \\frac{50 + 85 + 60 + 65}{4} = 65\\\\[0.5em]\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
     "$$"
    ]
   },
@@ -1218,11 +1218,11 @@
    "id": "b1937eeb-772d-41e8-94dc-138c7ad528c9",
    "metadata": {},
    "source": [
-    "$$\\begin{align}\n",
+    "$$\\begin{align*}\n",
     "\\large RSS_{split}  &\\large =           &\\large\\left[(75-68)^2 + (70-68)^2 + (95-68)^2 + (40-68)^2 + (60-68)^2 \\right] \\\\[0.5em]\n",
     "\\large              &                   & \\large + \\left[(50-65)^2 + (85-65)^2 + (60-65)^2 + (65-65)^2 \\right] \\\\[0.5em]\n",
     "\\large              &\\large =           & \\large 1630 + 650 = \\mathbf{2280}\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
     "$$"
    ]
   },
@@ -1239,10 +1239,10 @@
    "id": "47953b7f-8eaf-4837-a71b-148e48f4eaaa",
    "metadata": {},
    "source": [
-    "$$\\begin{align}\n",
+    "$$\\begin{align*}\n",
     "\\large \\mu_{R_{left}}\\ &\\large= \\frac{50 + 40 + 60}{3} = 50\\\\[0.5em]\n",
     "\\large \\mu_{R_{right}}\\ &\\large= \\frac{75 + 70 + 95 + 85 + 60 + 65}{6} = 75\\\\[0.5em]\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
     "$$"
    ]
   },
@@ -1259,11 +1259,11 @@
    "id": "24801200-f08c-4dc8-ad48-22e8ffa35bbf",
    "metadata": {},
    "source": [
-    "$$\\begin{align}\n",
+    "$$\\begin{align*}\n",
     "\\large RSS_{split}  &\\large =           &\\large\\left[(50-50)^2 + (40-50)^2 + (60-50)^2 \\right] \\\\[0.5em]\n",
     "\\large              &                   & \\large + \\left[(75-75)^2 + (70-75)^2 + (95-75)^2 + (85-75)^2 + (60-75)^2 + (65-75)^2 \\right] \\\\[0.5em]\n",
     "\\large              &\\large =           & \\large 200 + 850 = \\mathbf{1050}\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
     "$$"
    ]
   },
