--- a/notebooks/llm_openai_api_basics.ipynb
+++ b/notebooks/llm_openai_api_basics.ipynb
@@ -1470,15 +1470,15 @@
    "id": "21c3e2bb-7caa-4f59-87bd-311df25a0999",
    "metadata": {},
    "source": [
-    "| Tool Name            | Description                                                                                     | Model Support           |                                                                                            |\n",
-    "| -------------------- | ----------------------------------------------------------------------------------------------- | ----------------------- | ------------------------------------------------------------------------------------------ |\n",
-    "| **Web Search**       | Retrieves up-to-date information from the internet.                                             | `gpt-4o`, `gpt-4o-mini` | \n",
-    "| **Function Calling**       |Give models access to new functionality and data they can use to follow instructions and respond to prompts.                                            | `gpt-4o`, `gpt-4o-mini` | \n",
-    "| **File Search**      | Searches and retrieves information from uploaded files.                                         | `gpt-4o`, `gpt-4o-mini` |                                                                                            |\n",
-    "| **Computer Use**     | Executes tasks on a computer, such as opening applications or interacting with the file system. | `gpt-4o`, `gpt-4o-mini` |                                                                                            |\n",
-    "| **Code Interpreter** | Executes code in a sandboxed environment for computations and data analysis.                    | `gpt-4o`, `gpt-4o-mini` |                                                                                            |\n",
-    "| **Image Generation** | Generates images from text prompts.                                                             | `gpt-4o`, `gpt-4o-mini` |                                                                                            |\n",
-    "| **Hosted MCP Tools** | Integrates with external Model Context Protocol (MCP) servers to access custom tools.           | `gpt-4o`, `gpt-4o-mini` | "
+    "| Tool Name            | Description                                                                                                 |\n",
+    "| -------------------- | ----------------------------------------------------------------------------------------------------------- |\n",
+    "| **Web Search**       | Retrieves up-to-date information from the internet.                                                         |\n",
+    "| **Function Calling** |Give models access to new functionality and data they can use to follow instructions and respond to prompts. | \n",
+    "| **File Search**      | Searches and retrieves information from uploaded files.                                                     |\n",
+    "| **Computer Use**     | Executes tasks on a computer, such as opening applications or interacting with the file system.             |\n",
+    "| **Code Interpreter** | Executes code in a sandboxed environment for computations and data analysis.                                |\n",
+    "| **Image Generation** | Generates images from text prompts.                                                                         |\n",
+    "| **Hosted MCP Tools** | Integrates with external Model Context Protocol (MCP) servers to access custom tools.                       |"
    ]
   },
   {
