--- a/notebooks/word2vec_training_from_scratch.ipynb
+++ b/notebooks/word2vec_training_from_scratch.ipynb
@@ -1699,7 +1699,7 @@
     "            # Context window\n",
     "            window = np.random.randint(1, high=self.context_size)\n",
     "            for j in range(-window, window + 1):\n",
-    "                if j == 0 or i + j < 0 or i + j >= len(tokens):\n",
+    "                if j == 0 or i + j < 0 or i + j >= len(word_indices):\n",
     "                    continue\n",
     "                context = word_indices[i + j]\n",
     "                word_pairs.append((center, context))\n",
