--- a/notebooks/language_models_basics.ipynb
+++ b/notebooks/language_models_basics.ipynb
@@ -362,7 +362,8 @@
    "id": "cf251ccb-1a4c-41ea-9f9a-dd3128de1331",
    "metadata": {},
    "source": [
-    "$$\\begin{align}\n",
+    "$$\n",
+    "\\begin{align}\n",
     "\\large P(\\text{\"night \"}|\\text{ \"I ate cereal last\"}) &= \\large \\frac{count(\\text{\"I ate cereal last night\"})}{count(\\text{\"I ate cereal last\"})}\n",
     "\\end{align}\n",
     "$$"
@@ -385,7 +386,8 @@
    "id": "06041287-f05b-448f-bbae-cc96b220aef3",
    "metadata": {},
    "source": [
-    "$$\\begin{align}\n",
+    "$$\n",
+    "\\begin{align}\n",
     "\\large P(\\text{\"night \"}|\\text{ \"I ate cereal last\"})\\ & \\large \\stackrel{\\text{bigram}}{\\approx} P(\\text{\"night \"}|\\text{ \"last\"}) = \\frac{count(\\text{\"last night\"})}{count(\\text{\"last\"})} \\\\[1em]\n",
     "\\large P(\\text{\"night \"}|\\text{ \"I ate cereal last\"})\\ & \\large \\stackrel{\\text{trigram}}{\\approx} P(\\text{\"night \"}|\\text{ \"cereal last\"}) =\\frac{count(\\text{\"cereal last night\"})}{count(\\text{\"cereal last\"})}\n",
     "\\end{align}\n",
@@ -411,7 +413,8 @@
    "id": "7b77d22f-34f0-4e83-9832-83753ca00972",
    "metadata": {},
    "source": [
-    "$$\\begin{align}\n",
+    "$$\n",
+    "\\begin{align}\n",
     "\\large P(\\text{\"night \"}|\\text{ \"last\"})\\ &\\large = \\frac{count(\\text{\"last night\"})}{count(\\text{\"last\"})} = \\frac{2}{5} \\\\[1em]\n",
     "\\large P(\\text{\"knight \"}|\\text{ \"last\"})\\ &\\large =\\frac{count(\\text{\"last knight\"})}{count(\\text{\"last\"})} = \\frac{1}{5}\n",
     "\\end{align}\n",
@@ -638,7 +641,7 @@
    "source": [
     "<br />\n",
     "\n",
-    "again, $\\text{[BOS]}$ and $\\text{[EOS]}$ are special tokens marking the beginning and the end of a sequence. As mentioned earlier, the use of special tokens such as $\\text{[BOS]}$ and $\\text{[EOS]}$ may differ between task and training setups, and this figure above shows just one common example.\n",
+    "again, $\\text{[BOS]}$ and $\\text{[EOS]}$ are special tokens marking the beginning and the end of a sequence. As mentioned earlier, the use of special tokens such as $\\text{[BOS]}$ and $\\text{[EOS]}$ may differ between tasks and training setups, and this figure above shows just one common example.\n",
     "\n",
     "Notice that here &mdash; compared to the masked language model using the Transformer encoder &mdash; an output word only depends on the preceding words and the word itself. This is implemented using **causal masking** which ensures that the prediction of a word in the target sequence only depends on the previous words (and the word itself) but not any following words &mdash; without masking, the decoder processes all words in parallel and could therefore attend to future words during training, essentially \"peeking\" ahead and use information that would not be available when generating text in a real setting. By applying causal masking, the self-attention mechanism blocks any influence from tokens to the right (future tokens), forcing the model to learn to predict each word based solely on the words that came before it.\n",
     "\n",
