--- a/notebooks/logistic_regression_basics.ipynb
+++ b/notebooks/logistic_regression_basics.ipynb
@@ -2246,9 +2246,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py311",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "py311"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2260,7 +2260,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
