--- a/notebooks/recurrent_neural_networks_basics.ipynb
+++ b/notebooks/recurrent_neural_networks_basics.ipynb
@@ -172,8 +172,8 @@
    "source": [
     "$$\n",
     "\\begin{align}\n",
-    "\\large \\mathbf{h} &= \\large f_{h}(\\mathbf{W}_{xh}\\mathbf{x} + \\mathbf{b}_h)\\ , \\quad \\text{with}\\ W_{xh} \\in \\mathrel{R}^{4\\times 3},\\ \\mathbf{b}_h \\in \\mathrel{R}^{4\\times1}\\\\[1.5em]\n",
-    "\\large \\mathbf{y} &= \\large f_{y}(\\mathbf{W}_{hy}\\mathbf{h} + \\mathbf{b}_y)\\ , \\quad \\text{with}\\ W_{hy} \\in \\mathrel{R}^{2\\times 4},\\ \\mathbf{b}_y \\in \\mathrel{R}^{2\\times1}\n",
+    "\\large \\mathbf{h} &= \\large f_{h}(\\mathbf{W}_{xh}\\mathbf{x} + \\mathbf{b}_h)\\ , \\quad \\text{with}\\ \\mathbf{W}_{xh} \\in \\mathbb{R}^{4\\times 3},\\ \\mathbf{b}_h \\in \\mathbb{R}^{4\\times1}\\\\[1.5em]\n",
+    "\\large \\mathbf{y} &= \\large f_{y}(\\mathbf{W}_{hy}\\mathbf{h} + \\mathbf{b}_y)\\ , \\quad \\text{with}\\ \\mathbf{W}_{hy} \\in \\mathbb{R}^{2\\times 4},\\ \\mathbf{b}_y \\in \\mathbb{R}^{2\\times1}\n",
     "\\end{align}\n",
     "$$"
    ]
@@ -266,7 +266,7 @@
    "metadata": {},
    "source": [
     "$$\\large\n",
-    "h_t = f_{\\mathbf{W}}(\\mathbf{h}_{t-1}, \\mathbf{x}_t)\n",
+    "\\mathbf{h}_t = f_{\\mathbf{W}}(\\mathbf{h}_{t-1}, \\mathbf{x}_t)\n",
     "$$"
    ]
   },
