--- a/notebooks/attention_mha_basics.ipynb
+++ b/notebooks/attention_mha_basics.ipynb
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "id": "74f3f43a-34d3-4ff7-aed9-81a79160f04d",
    "metadata": {},
    "outputs": [],
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "id": "8adedcaa-9c14-4b26-9054-143f21cf185c",
    "metadata": {},
    "outputs": [],
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "id": "c873a5cd-ca7f-4fd9-80e7-162824d72851",
    "metadata": {},
    "outputs": [],
@@ -680,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "id": "29c5f8cf-726a-46aa-96b2-be1bb427ebf5",
    "metadata": {},
    "outputs": [],
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "id": "f556b2d0-0140-4a0b-8397-f2bac4e7a27d",
    "metadata": {},
    "outputs": [
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "id": "1fb0ddc1-f01d-41ab-92e8-7f378eef29af",
    "metadata": {},
    "outputs": [],
@@ -760,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "id": "a1973805-f93c-4dad-90d9-1b90a1113544",
    "metadata": {},
    "outputs": [
@@ -906,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "id": "d69dac27-fdd8-4886-89bb-1c9d4f84d7ca",
    "metadata": {},
    "outputs": [],
@@ -945,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "id": "90a56255-5c3c-4d88-a786-c578d4997861",
    "metadata": {},
    "outputs": [],
@@ -966,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "id": "7db6101a-8cd9-440b-a80e-b4146cb35aac",
    "metadata": {},
    "outputs": [
@@ -997,7 +997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "id": "6b09855f-2346-4fc6-ae47-976d120f7975",
    "metadata": {},
    "outputs": [],
@@ -1015,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "id": "e96da4ea-69ae-4ac9-9a09-6e763c2b12b8",
    "metadata": {},
    "outputs": [
@@ -1168,9 +1168,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py311",
+   "display_name": "selene",
    "language": "python",
-   "name": "py311"
+   "name": "selene"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1182,7 +1182,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
