--- a/notebooks/llm_training_data_preparation_batching.ipynb
+++ b/notebooks/llm_training_data_preparation_batching.ipynb
@@ -117,7 +117,7 @@
    "id": "a930b440-c58e-4f26-b6ee-4346e99cd05d",
    "metadata": {},
    "source": [
-    "<img src=\"images/illustrations/llm/llm-transformer-training-example.png\" style=\"margin:auto;max-width:750px;width:100%\" alt=\"Transformer Architecture\" />"
+    "<img src=\"images/illustrations/llm/llm-transformer-training-example.png\" style=\"margin:auto;max-width:750px;width:100%\" alt=\"Transformer - Next-Word Prediction Training Setup\" />"
    ]
   },
   {
@@ -952,9 +952,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py311",
+   "display_name": "selene",
    "language": "python",
-   "name": "py311"
+   "name": "selene"
   },
   "language_info": {
    "codemirror_mode": {
@@ -966,7 +966,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
