--- a/notebooks/retrieval_augmented_generation_rag_basic_example.ipynb
+++ b/notebooks/retrieval_augmented_generation_rag_basic_example.ipynb
@@ -71,10 +71,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████████████████████| 827k/827k [00:00<00:00, 12.7MiB/s]\n"
+      "File 'data/datasets//text/corpora/news/sciencenews-articles-sampled.csv' already exists (use 'overwrite=True' to overwrite it).\n"
      ]
     }
    ],
@@ -283,7 +283,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The wind speeds of Hurricane Melissa were estimated to be between 125 and 155 mph (200-250 km/h) at landfall on the island of Barbados on September 29, 1995. The hurricane was a Category 5 on the Saffir-Simpson Hurricane Wind Scale, with winds that were strong enough to cause significant damage and loss of life.\n"
+      "The wind speeds of Hurricane Melissa were estimated to be around 155 mph (250 km/h) on August 29, 1995, which was a Category 5 hurricane at the time.\n"
      ]
     }
    ],
