--- a/notebooks/nn_linear_layer.ipynb
+++ b/notebooks/nn_linear_layer.ipynb
@@ -319,8 +319,8 @@
     "$$\\large\n",
     "\\frac{\\partial\\mathcal{L}}{\\partial \\mathbf{Y}} =\n",
     "\\begin{bmatrix}\n",
-    "\\frac{\\partial L}{\\partial y_{11}} & \\frac{\\partial L}{\\partial y_{12}} & \\frac{\\partial L}{\\partial y_{13}}\\\\\n",
-    "\\frac{\\partial L}{\\partial y_{12}} & \\frac{\\partial L}{\\partial y_{22}} & \\frac{\\partial L}{\\partial y_{23}}\n",
+    "\\frac{\\partial \\mathcal{L}}{\\partial y_{11}} & \\frac{\\partial \\mathcal{L}}{\\partial y_{12}} & \\frac{\\partial \\mathcal{L}}{\\partial y_{13}}\\\\\n",
+    "\\frac{\\partial \\mathcal{L}}{\\partial y_{12}} & \\frac{\\partial \\mathcal{L}}{\\partial y_{22}} & \\frac{\\partial \\mathcal{L}}{\\partial y_{23}}\n",
     "\\end{bmatrix}\n",
     "$$"
    ]
